tests/ui/closures/issue-90871.stderr
error[E0412]: cannot find type `n` in this scope
  --> $DIR/issue-90871.rs:4:22
   |
LL |     type_ascribe!(2, n([u8; || 1]))
   |                      ^ help: a trait with a similar name exists: `Fn`
   |
  --> $SRC_DIR/core/src/ops/function.rs:LL:COL
   |
   = note: similarly named trait `Fn` defined here

error[E0308]: mismatched types
  --> $DIR/issue-90871.rs:4:29
   |
LL |     type_ascribe!(2, n([u8; || 1]))
   |                             ^^^^ expected `usize`, found closure
   |
   = note: expected type `usize`
           found closure `{closure@$DIR/issue-90871.rs:4:29: 4:31}`
help: use parentheses to call this closure
   |
LL |     type_ascribe!(2, n([u8; (|| 1)()]))
   |                             +    +++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0308, E0412.
For more information about an error, try `rustc --explain E0308`.
